--- a/package.json
+++ b/package.json
@@ -4,6 +4,14 @@
   "description": "Load a custom tsconfig.json file when building your project with craco",
   "types": "index.d.ts",
   "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/manuelurenah/craco-plugin-custom-tsconfig.git"
+  },
+  "homepage": "https://github.com/manuelurenah/craco-plugin-custom-tsconfig#readme",
+  "bugs": {
+    "url": "https://github.com/manuelurenah/craco-plugin-custom-tsconfig/issues"
+  },
   "keywords": [
     "craco",
     "create-react-app",
