--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "craco-plugin-custom-tsconfig",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "Load a custom tsconfig.json file when building your project with craco",
   "types": "index.d.ts",
   "main": "index.js",
@@ -21,7 +21,7 @@
   "author": "Manuel Emilio Urena <manuel.ureh@hotmail.com>",
   "license": "MIT",
   "peerDependencies": {
-    "@craco/craco": ">=5.0.0",
+    "@craco/craco": ">=5.0.0 || >=7.0.0-alpha",
     "react-scripts": ">=4.0.0"
   }
 }
